--- a/conf/.pip/pip.conf
+++ b/conf/.pip/pip.conf
@@ -1,3 +1,4 @@
 [global]
-trusted-host = mirrors.ustc.edu.cn
-index-url = https://mirrors.ustc.edu.cn/pypi/web/simple
+index-url = http://mirrors.aliyun.com/pypi/simple/
+[install]
+trusted-host=mirrors.aliyun.com
